Bugfix: manage Campaigns: it was possible to remove the Parent item but leave child items. Bugfix: selection in the option gets cut off when h-scrolling.

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -248,3 +248,7 @@ body {
     padding: 4px;
     display: inline-block;
 }
+
+option {
+    min-inline-size: min-content; /*see moz bug 2007620, crbug 471235858*/
+}
